--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coinbase/onchainkit": "^0.20.7",
+    "@libsql/client": "^0.6.2",
     "@rainbow-me/rainbowkit": "^2.1.2",
     "@tanstack/react-query": "^5.40.1",
+    "axios": "^1.7.2",
     "chart.js": "^3.9.1",
     "daisyui": "^2.31.0",
     "ethers": "^5.7.1",
